All_Component_DX/force-app/main/default/objects/Service_Contract__c/fields/Activation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Activation_Notes__c</fullName>
    <description>Service/Maintenance Contract Activation Notes</description>
    <inlineHelpText>Service/Maintenance Contract Activation Notes</inlineHelpText>
    <label>Activation Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>