All_Component_DX/force-app/main/default/objects/Service_Contract__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating if this contract is currently active or not. This flag is checked automatically when you activate a contract</description>
    <inlineHelpText>Flag indicating if this contract is currently active or not. This flag is checked automatically when you activate a contract</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>