All_Component_DX/force-app/main/default/objects/Service_Contract__c/fields/All_Contacts_Covered__c.field-meta.xml
<CustomField>
    <fullName>All_Contacts_Covered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that indicates if all contacts from this customer are entitled for support. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
    <inlineHelpText>Flag that indicates if all contacts from this customer are entitled for support. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
    <label>All Contacts Covered</label>
    <type>Checkbox</type>
</CustomField>