All_Component_DX/force-app/main/default/objects/Service_Contract__c/fields/Billing_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Billing_Schedule__c</fullName>
    <description>Indicates the frequency of how the customer prefers to be invoiced for the contract amount</description>
    <inlineHelpText>Indicates the frequency of how the customer prefers to be invoiced for the contract amount</inlineHelpText>
    <label>Billing Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Semi Annual</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Full Upfront</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>