All_Component_DX/force-app/main/default/objects/Service_Contract__c/fields/Cancelation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_Notes__c</fullName>
    <description>Service/Maintenance Contract Cancelation Notes</description>
    <inlineHelpText>Service/Maintenance Contract Cancelation Notes</inlineHelpText>
    <label>Cancelation Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>