All_Component_DX/force-app/main/default/objects/Service_Contract__c/fields/Canceled_By__c.field-meta.xml
<CustomField>
    <fullName>Canceled_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the salesforce user  that canceled this service contract</description>
    <inlineHelpText>Name of the salesforce user  that canceled this service contract</inlineHelpText>
    <label>Canceled By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N70000001hzcwEAA</relationshipName>
    <type>Lookup</type>
</CustomField>