All_Component_DX/force-app/main/default/objects/Service_Contract__c/fields/Contract_Price2__c.field-meta.xml
<CustomField>
    <fullName>Contract_Price2__c</fullName>
    <description>Total price of the service contract before discount</description>
    <inlineHelpText>Total price of the service contract before discount</inlineHelpText>
    <label>Contract Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>