All_Component_DX/force-app/main/default/objects/Service_Contract__c/fields/Counter_Usages_Processed_Until__c.field-meta.xml
<CustomField>
    <fullName>Counter_Usages_Processed_Until__c</fullName>
    <label>Counter Usages Processed Until</label>
    <type>DateTime</type>
</CustomField>