All_Component_DX/force-app/main/default/objects/Service_Contract__c/fields/Default_Group_Member__c.field-meta.xml
<CustomField>
    <fullName>Default_Group_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Not used</description>
    <label>Default Group Member</label>
    <referenceTo>Service_Group_Members__c</referenceTo>
    <relationshipLabel>Service Contracts (Default Group Member)</relationshipLabel>
    <relationshipName>Service_Contract</relationshipName>
    <type>Lookup</type>
</CustomField>