All_Component_DX/force-app/main/default/objects/Service_Contract__c/fields/Default_Service_Group__c.field-meta.xml
<CustomField>
    <fullName>Default_Service_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Not used</description>
    <label>Default Service Group</label>
    <referenceTo>Service_Group__c</referenceTo>
    <relationshipLabel>Service Contracts</relationshipLabel>
    <relationshipName>Service_Contract</relationshipName>
    <type>Lookup</type>
</CustomField>