All_Component_DX/force-app/main/default/objects/Service_Contract__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Percentage discount to be applied on the contract price</description>
    <inlineHelpText>Percentage discount on the contract price</inlineHelpText>
    <label>Discount%</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>