All_Component_DX/force-app/main/default/objects/Service_Contract__c/fields/Discounted_Price2__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Price2__c</fullName>
    <description>Contract Price minus discount. Calculated automatically</description>
    <formula>Contract_Price2__c - (Contract_Price2__c * Discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contract Price minus discount. Calculated automatically</inlineHelpText>
    <label>Discounted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>