All_Component_DX/force-app/main/default/objects/Service_Contract__c/fields/Discounted_Price__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Price__c</fullName>
    <description>Contract Price minus discount. Calculated automatically</description>
    <inlineHelpText>Contract Price minus discount. Calculated automatically</inlineHelpText>
    <label>Discounted Price(DO NOT USE)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>