All_Component_DX/force-app/main/default/objects/Service_Contract__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date of the service contract</description>
    <inlineHelpText>End date of the service contract</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>