All_Component_DX/force-app/main/default/objects/Service_Contract__c/fields/Exchange_Type__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Type__c</fullName>
    <description>Type of exchange allowed as per the service contract</description>
    <label>Exchange Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advance Exchange</fullName>
            </value>
            <value>
                <fullName>Return Exchange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>