All_Component_DX/force-app/main/default/objects/Service_Contract__c/fields/Minimum_Labor__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Labor__c</fullName>
    <description>Minimum labor price for overtime</description>
    <label>Minimum Labor (Mins)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>