All_Component_DX/force-app/main/default/objects/Service_Contract__c/fields/Primary_Technician__c.field-meta.xml
<CustomField>
    <fullName>Primary_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary technician for this service contract. Reference to an existing Technician record in ServiceMax</description>
    <label>Primary Technician</label>
    <referenceTo>Service_Group_Members__c</referenceTo>
    <relationshipLabel>Service Contracts (Primary Technician)</relationshipLabel>
    <relationshipName>Service_Contract_Primary_Tech</relationshipName>
    <type>Lookup</type>
</CustomField>