All_Component_DX/force-app/main/default/objects/Service_Contract__c/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <description>Date on which the contract was renewed</description>
    <inlineHelpText>Date on which the contract was renewed</inlineHelpText>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>