All_Component_DX/force-app/main/default/objects/Service_Contract__c/fields/Renewal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Notes__c</fullName>
    <description>Service/Maintenance Contract Renewal Notes</description>
    <inlineHelpText>Service/Maintenance Contract Renewal Notes</inlineHelpText>
    <label>Renewal Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>