All_Component_DX/force-app/main/default/objects/Service_Contract__c/fields/Renewal_Number__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Number__c</fullName>
    <description>This is incremented automatically when an existing service contract is renewed</description>
    <inlineHelpText>This is incremented automatically when an existing service contract is renewed</inlineHelpText>
    <label>Renewal Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>