All_Component_DX/force-app/main/default/objects/Service_Contract__c/fields/Round_Labor_To_Nearest__c.field-meta.xml
<CustomField>
    <fullName>Round_Labor_To_Nearest__c</fullName>
    <description>Maximum minutes a technician can work as overtime</description>
    <label>Round Labor To Nearest (Mins)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>