All_Component_DX/force-app/main/default/objects/Service_Contract__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the internal sales representative responsible for or involved in selling this contract. Is a lookup to a valid salesforce user</description>
    <inlineHelpText>Name of the internal sales representative responsible for or involved in selling this contract. Is a lookup to a valid salesforce user</inlineHelpText>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N70000001hzbvEAA</relationshipName>
    <type>Lookup</type>
</CustomField>