All_Component_DX/force-app/main/default/objects/Service_Contract__c/fields/Service_Plan__c.field-meta.xml
<CustomField>
    <fullName>Service_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Plan</label>
    <referenceTo>Service_Plan__c</referenceTo>
    <relationshipLabel>Service/Maintenance Contracts</relationshipLabel>
    <relationshipName>Service_Maintenance_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>