All_Component_DX/force-app/main/default/objects/Service_Contract__c/fields/SESSION_ID__c.field-meta.xml
<CustomField>
    <fullName>SESSION_ID__c</fullName>
    <description>Not used</description>
    <formula>$Api.Session_ID</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SESSION ID</label>
    <type>Text</type>
</CustomField>