All_Component_DX/force-app/main/default/objects/Service_Contract__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date of the service contract</description>
    <inlineHelpText>Start date of the service contract</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>