All_Component_DX/force-app/main/default/objects/Service_Contract__c/fields/Weeks_To_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Weeks_To_Renewal__c</fullName>
    <description>Number of weeks before the contract expires. Calculated automatically</description>
    <formula>(End_Date__c - TODAY()) / 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weeks To Renewal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>