All_Component_DX/force-app/main/default/objects/Service_Contract__c/validationRules/Service_Contract_Future_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Contract_Future_End_Date</fullName>
    <active>true</active>
    <description>Service contract end date should be in the future</description>
    <errorConditionFormula>AND(ISNEW(),  End_Date__c  &lt;  TODAY())</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End date should be a future date.</errorMessage>
</ValidationRule>