All_Component_DX/force-app/main/default/objects/Service_Contract__c/validationRules/Service_Contract_Start_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Contract_Start_End_Date</fullName>
    <active>true</active>
    <description>Service contract should have valid start and end dates</description>
    <errorConditionFormula>End_Date__c  &lt;  Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End date should be greater or equal to Start date.</errorMessage>
</ValidationRule>