All_Component_DX/force-app/main/default/objects/Service_Contract__c/listViews/Inactive_Service_Contracts.listView-meta.xml
<ListView>
    <fullName>Inactive_Service_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Company__c</columns>
    <columns>Contact__c</columns>
    <columns>Renewal_Date__c</columns>
    <columns>Renewal_Number__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive Service Contracts</label>
    <language>en_US</language>
</ListView>